# outcome-rust

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
tests/: integration_test.rs
