[package]
name = "outcome"
version = "0.1.7"
authors = ["Lachlan Sneff <lachlan.sneff@gmail.com>"]
description = "A Success/Failure type for rust"
license = "MIT"
repository = "https://github.com/lachlansneff/outcome-rust.git"
documentation = "https://docs.rs/outcome/"
readme = "README.md"

[dependencies]
